# wraps-python

./: .gitignore  LICENCE  README.md  example-421.py  example-game421.py  example-u421.py  pyproject.toml  wd-example-cofeeRobot.py  wd-example-game421.py
pyBbMm/: __init__.py  bbmm.h  bmBench.py  bmCode.py  bmCondition.py  bmEvaluator.py  bmInferer.py  bmTree.py  bmVector.py  clib.py  clibCore.py  code.py  model.py
pyBbMm/core/: __init__.py  bbmm.h  bench.py  clibBbMm.py  code.py  condition.py  criterion.py  evaluator.py  inferer.py  tree.py  vector.py
src/pyBbMm/: model.py
src/pyBbMm/core/: __init__.py  bbmm.h  bench.py  clib.py  clibBbMm.py  code.py  condition.py  evaluator.py  function.py  inferer.py  tree.py  valuefct.py  vector.py
tests/: test_01_core.py  test_02_code.py  test_03_vector.py  test_04_bench.py  test_11_code.py  test_11_condition.py  test_12_inferer.py  test_12_vector.py  test_13_bench.py  test_13_evaluator.py  test_14_tree.py  test_21_ValueFct.py  test_21_condition.py  test_22_function.py  test_22_inferer.py  test_23_criterion.py  test_23_evaluator.py  test_24_evaluator.py  test_31_condition.py  test_32_inferer.py  test_33_evaluator.py  test_41_model.py  test_51_model.py
tests/models/: simple421.json  simple421.py
