[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyBbMm"
version = "0.0.1"
authors = [
  { name="Guillaume Lozenguez", email="guillaume@drods.net" },
]
description = "Python wraps of the libBbMm"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://ktorz.bitbucket.io/"
